syntax = "proto3";

import "stats/messages/RecommendationMessages.proto";

option java_package = "ru.yandex.practicum.grpc.stats.recommendations.proto";

service RecommendationsController {

  rpc GetRecommendationsForUser (UserPredictionsRequestProto) returns (stream RecommendedEventProto);

  rpc GetSimilarEvents (SimilarEventsRequestProto) returns (stream RecommendedEventProto);

  rpc GetInteractionsCount (InteractionsCountRequestProto) returns (stream RecommendedEventProto);
}